--- a/src/components/Forms/Login.astro
+++ b/src/components/Forms/Login.astro
@@ -53,15 +53,14 @@
           <input name="_redirect" type="hidden" value="#" /><div
             class="space-y-6">
             <div>
-              <label class="sr-only" name="name"
-                >User name or email Adress</label
+              <label class="sr-only">User name or email Adress</label
               >
               <input
                 class="w-full focus:outline-none border py-3 appearance-none bg-slate-50 block border-slate-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-slate-400 px-3 rounded-xl sm:text-sm text-accent-500"
                 placeholder="Type here..."
               />
             </div><div class="col-span-full">
-              <label class="sr-only" name="company">Password</label>
+              <label class="sr-only">Password</label>
               <input
                 class="w-full focus:outline-none border py-3 appearance-none bg-slate-50 block border-slate-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-slate-400 px-3 rounded-xl sm:text-sm text-accent-500"
                 placeholder="Type password here..."
