--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -4,11 +4,10 @@
     class="items-center px-8 mx-auto py-12 gh:py-24 md:px-12 lg:px-16 xl:px-36 2xl:max-w-7xl">
     <div class="xl:grid xl:grid-cols-3 xl:gap-8">
       <div class="text-white xl:col-span-3">
-        <span class="text-lg font-semibold lg:text-2xl italic">Astro SaaS</span>
+        <span class="text-lg font-semibold lg:text-2xl italic">Degass</span>
         <p class="lg:w-1/4 mt-2 text-sm text-slate-400">
           <span class="mt-6 font-normal">
-            Digital resources for digital designers and web developers by
-            Michael Andreuzza
+            Degass, la webapp de <b>gestion</b> et d’<b>organisation</b> d’événements pour asscociations & écoles supérieures. 
           </span>
         </p>
       </div>
@@ -22,7 +21,6 @@
                   Home
                 </a>
               </li>
-
               <li>
                 <a href="/faq" class="text-sm text-slate-400 hover:text-white">
                   FAQ
@@ -32,28 +30,7 @@
                 <a
                   href="/terms"
                   class="text-sm text-slate-400 hover:text-white">
-                  Terms
-                </a>
-              </li>
-              <li>
-                <a
-                  href="/privacy"
-                  class="text-sm text-slate-400 hover:text-white">
-                  Privacy
-                </a>
-              </li>
-              <li>
-                <a
-                  href="/signup"
-                  class="text-sm text-slate-400 hover:text-white">
-                  Sign up
-                </a>
-              </li>
-              <li>
-                <a
-                  href="/signup"
-                  class="text-sm text-slate-400 hover:text-white">
-                  Sign In
+                  Conditions générales de ventes
                 </a>
               </li>
             </ul>
@@ -63,34 +40,17 @@
             <ul role="list" class="mt-4 space-y-2">
               <li>
                 <a
-                  href="https://www.unwrapped.design"
+                  href=""
                   class="text-sm text-slate-400 hover:text-white">
-                  Unwrapped
+                  Documentation
                 </a>
               </li>
               <li>
-                <a
-                  href="https://github.com/michael-andreuzza/astrosaas"
-                  class="text-sm text-slate-400 hover:text-white">
-                  GitHub repo
-                </a>
-              </li>
             </ul>
           </div>
         </div>
         <div class="md:grid md:grid-cols-2 md:gap-8">
-          <div>
-            <h3 class="text-xl text-white">More themes</h3>
-            <ul role="list" class="mt-4 space-y-2">
-              <li>
-                <a
-                  href="https://lexingtonthemes.com/"
-                  class="text-sm text-slate-400 hover:text-white">
-                  Lexington Themes
-                </a>
-              </li>
-            </ul>
-          </div>
+          
           <div class="mt-12 md:mt-0">
             <h3 class="text-xl text-white">Socials</h3>
             <ul role="list" class="mt-4 space-y-2">
@@ -98,21 +58,7 @@
                 <a
                   href="https://twitter.com/unwrappedHQ"
                   class="text-sm text-slate-400 hover:text-white">
-                  @unwrappedHQ
-                </a>
-              </li>
-              <li>
-                <a
-                  href="https://twitter.com/Mike_Andreuzza"
-                  class="text-sm text-slate-400 hover:text-white">
-                  @Mike_Andreuzza
-                </a>
-              </li>
-              <li>
-                <a
-                  href="https://dribbble.com/MichaelAndreuzza.html"
-                  class="text-sm text-slate-400 hover:text-white">
-                  Dribbble
+                  @degass.tools
                 </a>
               </li>
             </ul>
@@ -128,15 +74,15 @@
     <div class="md:flex md:items-center md:justify-between">
       <div class="flex justify-center space-x-6 md:order-2">
         <a
-          href="https://twitter.com/mike_andreuzza"
+          href="https://linkedin.com"
           class="p-3 text-sm text-slate-400 transition duration-500 ease-in-out transform hover:text-white">
-          <span class=""> @Mike_Andreuzza</span>
+          <span class=""> @pierre_savary</span>
         </a>
       </div>
       <div class="mt-8 md:mt-0 md:order-1">
         <p class="text-center">
           <span class="mx-auto mt-2 text-sm text-slate-400">
-            By Michael Anddeuzza
+            Par Pierre Savary
           </span>
         </p>
       </div>
