--- a/src/components/global/Testimonial.astro
+++ b/src/components/global/Testimonial.astro
@@ -3,7 +3,7 @@
     class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
     <div class="max-w-2xl mx-auto md:text-center">
       <h2 class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight">
-        Astrosaas is very popular!
+        Rejoignez ceux qui nous ont fait confiance !
       </h2>
     </div>
     <ul
@@ -15,8 +15,8 @@
             <figure class="relative h-full p-6 bg-white rounded-3xl">
               <blockquote class="relative">
                 <p class="text-base text-slate-500">
-                  Snowflake is a cloud data platform that enables data storage,
-                  processing, and analytics solutions for businesses and more.
+                  Degass a été très utile pour mon équipe et moi même, ça simplifie beaucoup de choses ! 
+                  En plus, service après vente est vraiment top Je recommande !
                 </p>
               </blockquote>
               <figcaption
@@ -24,16 +24,16 @@
                 <div>
                   <div
                     class="text-lg font-semibold leading-6 text-black font-display">
-                    Annur Flint
+                    Agathe Béjaud
                   </div>
                   <div class="mt-1 text-sm text-slate-500">
-                    CEO at Flint LLC
+                    BDE Onnea
                   </div>
                 </div>
                 <div class="overflow-hidden rounded-full bg-slate-50">
                   <img
                     alt=""
-                    src="https://images.unsplash.com/flagged/photo-1570612861542-284f4c12e75f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                    src="../../../public/testimonials/agathe.jpg"
                     width="56"
                     height="56"
                     decoding="async"
@@ -50,9 +50,7 @@
             <figure class="relative h-full p-6 bg-white rounded-3xl">
               <blockquote class="relative">
                 <p class="text-base text-slate-500">
-                  With the Data Cloud platform, Snowflake manages the
-                  complexities of data storage infrastructure, enabling
-                  organizations.
+                  Un outil aussi intuitif que puissant ! Grâce à Degass, notre gestion d'événements n'a jamais été aussi simple et efficace. Bravo !
                 </p>
               </blockquote>
               <figcaption
@@ -60,10 +58,10 @@
                 <div>
                   <div
                     class="text-lg font-semibold leading-6 text-black font-display">
-                    Jordan Pettersson
+                    Guillaume Cren
                   </div>
                   <div class="mt-1 text-sm text-slate-500">
-                    Director at Pettersson Industries
+                    Responsable clubs Onnea
                   </div>
                 </div>
                 <div class="overflow-hidden rounded-full bg-slate-50">
@@ -90,8 +88,7 @@
             <figure class="relative h-full p-6 bg-white rounded-3xl">
               <blockquote class="relative">
                 <p class="text-base text-slate-500">
-                  Upswing securities passively index inverse bondholders
-                  capitalization financial health Moody's debt managed.
+                  L'organisation de nos événements avec Degass est un pur bonheur. C'est un outil intuitif, fiable et extrêmement pratique. On recommande vivement !
                 </p>
               </blockquote>
               <figcaption
@@ -99,16 +96,16 @@
                 <div>
                   <div
                     class="text-lg font-semibold leading-6 text-black font-display">
-                    Oliver Benji
+                    Barbara Szykula
                   </div>
                   <div class="mt-1 text-sm text-slate-500">
-                    Founder of Benji and Tom
+                    BDE Kronos
                   </div>
                 </div>
                 <div class="overflow-hidden rounded-full bg-slate-50">
                   <img
                     alt=""
-                    src="https://images.unsplash.com/photo-1624224971170-2f84fed5eb5e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1999&q=80"
+                    src="../../../public/testimonials/barbara.jpg"
                     width="56"
                     height="56"
                     decoding="async"
@@ -125,9 +122,7 @@
             <figure class="relative h-full p-6 bg-white rounded-3xl">
               <blockquote class="relative">
                 <p class="text-base text-slate-500">
-                  Receive bondholders called capitalization investment grade
-                  bonds bills management district stocks. Potential funds
-                  consulting.
+                  yessss
                 </p>
               </blockquote>
               <figcaption
@@ -135,9 +130,9 @@
                 <div>
                   <div
                     class="text-lg font-semibold leading-6 text-black font-display">
-                    Messi Lionel
+                    Mattéo Guiziou
                   </div>
-                  <div class="mt-1 text-sm text-slate-500">COO at Pff Inc</div>
+                  <div class="mt-1 text-sm text-slate-500">BDS Wolf</div>
                 </div>
                 <div class="overflow-hidden rounded-full bg-slate-50">
                   <img
@@ -163,8 +158,7 @@
             <figure class="relative h-full p-6 bg-white rounded-3xl">
               <blockquote class="relative">
                 <p class="text-base text-slate-500">
-                  Debt bills lucrative capitalization municipal bonds government
-                  401k bear bull credit corporate bonds called NYSE finance.
+                  Degass est un véritable atout pour notre BDE, facilitant la planification et l'organisation de nos événements avec une efficacité inégalée. Un indispensable !
                 </p>
               </blockquote>
               <figcaption
@@ -172,51 +166,16 @@
                 <div>
                   <div
                     class="text-lg font-semibold leading-6 text-black font-display">
-                    Melon Tusk
+                    Erwan Hascoet
                   </div>
                   <div class="mt-1 text-sm text-slate-500">
-                    Founder of Fesla
+                    BDE Oryx
                   </div>
                 </div>
                 <div class="overflow-hidden rounded-full bg-slate-50">
                   <img
                     alt=""
-                    src="https://images.unsplash.com/photo-1602434228300-a645bce6891b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1639&q=80"
-                    width="56"
-                    height="56"
-                    decoding="async"
-                    data-nimg="future"
-                    class="object-cover h-14 w-14"
-                    loading="lazy"
-                    style="color: transparent"
-                  />
-                </div>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="relative h-full p-6 bg-white rounded-3xl">
-              <blockquote class="relative">
-                <p class="text-base text-slate-500">
-                  Managed prices bondholders federal risk NASDAQ hedge fund
-                  expenses municipal bonds management, in the morning.
-                </p>
-              </blockquote>
-              <figcaption
-                class="relative flex items-center justify-between pt-6 mt-6 border-t border-slate-100">
-                <div>
-                  <div
-                    class="text-lg font-semibold leading-6 text-black font-display">
-                    Målgan
-                  </div>
-                  <div class="mt-1 text-sm text-slate-500">
-                    Director at Målagan AB
-                  </div>
-                </div>
-                <div class="overflow-hidden rounded-full bg-slate-50">
-                  <img
-                    alt=""
-                    src="https://images.unsplash.com/flagged/photo-1570612861542-284f4c12e75f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                    src="../../../public/testimonials/erwan.jpg"
                     width="56"
                     height="56"
                     decoding="async"
