--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -1,279 +1,245 @@
 <section aria-labelledby="pricing-section" id="pricing">
-  <div class="lg:px-16 max-w-7xl md:px-12 mx-auto px-8 py-24 scroll-mt-12">
-    <div class="text-center">
-      <h2
-        class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter">
-        Always know what you’ll pay,
-
-        <span class="lg:block"> transparent pricing for everyone.</span>
-      </h2>
-    </div>
-  </div>
-  <div class="items-center px-8 lg:pt-12 pb-24 mx-auto max-w-7xl lg:px-16">
-    <div
-      class="grid max-w-2xl grid-cols-1 py-4 -mx-4 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-4 lg:bg-slate-50 lg:border border-slate-500/10 lg:rounded-3xl">
-      <section class="flex flex-col px-6 rounded-3xl lg:py-8">
-        <h3 class="mt-5 text-lg text-black font-display">Greedy</h3>
-        <p class="mt-2 text-sm text-slate-500">
-          Amazing for those attached to money with glue
-        </p>
-        <p
-          class="order-first text-5xl font-light tracking-tight text-black font-display">
-          $0
-        </p>
-        <ul
-          role="list"
-          class="flex flex-col order-last mt-10 text-sm text-slate-600 gap-y-3">
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4">Connect 1 websites</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4"> 1 bank accounts</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4">Track up to 1 credit cards</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4">Analytics support</span>
-          </li>
-        </ul>
-        <a
-          class="inline-flex items-center justify-center w-full px-6 py-3 mt-8 text-center text-black transition duration-200 ease-in-out transform border-2 border-black hover:bg-transparent hover:border-black/50 rounded-xl focus:outline-none"
-          aria-label="Wannabe tier"
-          href="/register">Get started</a
-        >
-      </section>
-      <section class="flex flex-col px-6 rounded-3xl lg:py-8">
-        <h3 class="mt-5 text-lg text-black font-display">Wannabe</h3>
-        <p class="mt-2 text-sm text-slate-500">
-          Good for those trying to get there, but are too far from it.
-        </p>
-        <p
-          class="order-first text-5xl font-light tracking-tight text-black font-display">
-          $2
-        </p>
-        <ul
-          role="list"
-          class="flex flex-col order-last mt-10 text-sm text-slate-600 gap-y-3">
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4">Connect 1 websites</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4"> 2 bank accounts</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4">Track up to 15 credit cards</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4">Analytics support</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4"> 3 months data</span>
-          </li>
-        </ul>
-        <a
-          class="inline-flex items-center justify-center w-full px-6 py-3 mt-8 text-center text-black transition duration-200 ease-in-out transform border-2 border-black hover:bg-transparent hover:border-black/50 rounded-xl focus:outline-none"
-          aria-label="Wannabe tier"
-          href="/register">Get started</a
-        >
-      </section>
-      <section
-        class="flex flex-col order-first px-6 py-8 rounded-3xl sm:px-8 bg-black lg:-mt-24 lg:order-none">
-        <h3 class="mt-5 text-lg text-white font-display">Indie Hacker</h3>
-        <p class="mt-2 text-sm text-accent-100">
-          Perfect for those leaving 9-5 and working 24/7.
-        </p>
-        <p
-          class="order-first text-5xl font-light tracking-tight text-white font-display">
-          $29
-        </p>
-        <ul
-          role="list"
-          class="flex flex-col order-last mt-10 text-sm text-white gap-y-3">
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4">Connect 80 websites</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4"> 5 bank accounts</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4">Track up to 50 credit cards</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4">Analytics support</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4"> 12 months data</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4">Cloud service 24/7</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4">Track in multiple users</span>
-          </li>
-        </ul>
-        <a
-          class="inline-flex items-center justify-center w-full px-6 py-3 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border-2 border-white hover:bg-transparent hover:border-white rounded-xl hover:text-white focus:outline-none"
-          aria-label="Indie hacker tier"
-          href="/register">Get started</a
-        >
-      </section>
-      <section class="flex flex-col px-6 rounded-3xl lg:py-8">
-        <h3 class="mt-5 text-lg text-black font-display">Big fish</h3>
-        <p class="mt-2 text-sm text-slate-500">
-          For even the biggest enterprise companies.
-        </p>
-        <p
-          class="order-first text-5xl font-light tracking-tight text-black font-display">
-          $99
-        </p>
-        <ul
-          role="list"
-          class="flex flex-col order-last mt-10 text-sm text-slate-600 gap-y-3">
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4">Connect unlimited websites</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4"> 15 bank accounts</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4">Track up to 200 credit cards</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4">Analytics support</span>
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"
-            /><span class="ml-4"> 24 months data</span>
-          </li>
-        </ul>
-        <a
-          class="inline-flex items-center justify-center w-full px-6 py-3 mt-8 text-center text-black transition duration-200 ease-in-out transform border-2 border-black hover:bg-transparent hover:border-black/50 rounded-xl focus:outline-none"
-          aria-label="Big fish tier"
-          href="/register">Get started</a
-        >
-      </section>
-    </div>
-    <div class="mx-auto pt-12 lg:py-16">
-      <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
-        <div class="flex justify-center col-span-1 px-8">
-          <img alt="logo" class="max-h-12" src="/Figma.svg" />
-        </div><div class="flex justify-center col-span-1 px-8">
-          <img alt="logo" class="max-h-12" src="/Canva.svg" />
-        </div><div class="flex justify-center col-span-1 px-8">
-          <img alt="logo" class="max-h-12" src="/Stripe.svg" />
-        </div><div class="flex justify-center col-span-1 px-8">
-          <img alt="logo" class="max-h-12" src="/Gitlab.svg" />
-        </div><div class="flex justify-center col-span-1 px-8">
-          <img alt="logo" class="max-h-12" src="/Linear.svg" />
-        </div><div class="flex justify-center col-span-1 px-8">
-          <img alt="logo" class="max-h-12" src="/Gumroad.svg" />
-        </div>
-      </div>
-    </div>
-  </div>
+	<div class="lg:px-16 max-w-7xl md:px-12 mx-auto px-8 py-24 scroll-mt-12">
+		<div class="text-center">
+		<h2
+			class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter"
+		>
+		Le luxe du sur-mesure, <span class="lg:block"
+		>à moindre coût.
+		</span>
+		</h2>
+		</div>
+	</div>
+	<div class="items-center px-8 lg:pt-12 pb-24 mx-auto max-w-7xl lg:px-16">
+		<div
+		class="grid max-w-2xl grid-cols-1 py-4 -mx-4 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-4 lg:bg-slate-50 lg:border border-slate-500/10 lg:rounded-3xl"
+		>
+		<section class="flex flex-col px-6 rounded-3xl lg:py-8">
+			<h3 class="mt-5 text-lg text-black font-display">Very small</h3>
+			<p class="mt-2 text-sm text-slate-500">
+			Parfait pour les associations avec moins de 50 membres.
+			</p>
+			<p
+			class="order-first text-5xl font-light tracking-tight text-black font-display"
+			>
+			250€
+			</p>
+			<ul
+			role="list"
+			class="flex flex-col order-last mt-10 text-sm text-slate-600 gap-y-3"
+			>
+				<li class="flex items-center">
+					<ion-icon
+					class="w-4 h-4 md hydrated"
+					name="checkmark-outline"
+					role="img"
+					aria-label="checkmark outline"
+					/><span class="ml-4">Serveur partagé</span>
+				</li>
+				<li class="flex items-center">
+					<ion-icon
+					class="w-4 h-4 md hydrated"
+					name="checkmark-outline"
+					role="img"
+					aria-label="checkmark outline"
+					/><span class="ml-4">Base de donnée privée</span>
+				</li>
+				<li class="flex items-center">
+					<ion-icon
+					class="w-4 h-4 md hydrated"
+					name="checkmark-outline"
+					role="img"
+					aria-label="checkmark outline"
+					/><span class="ml-4">Nombre d'évènement illimité</span>
+				</li>
+				<li class="flex items-center">
+					<ion-icon
+					class="w-4 h-4 md hydrated"
+					name="checkmark-outline"
+					role="img"
+					aria-label="checkmark outline"
+					/><span class="ml-4">Nombre d'utilisateur maximum : 50</span>
+				</li>
+			</ul>
+			<a
+			class="inline-flex items-center justify-center w-full px-6 py-3 mt-8 text-center text-black transition duration-200 ease-in-out transform border-2 border-black hover:bg-transparent hover:text-black focus:ring-2 focus:ring-offset-2 focus:ring-offset-black focus:ring-black focus:outline-none rounded-3xl"
+			href="#">Obtenir une offre</a
+			>
+		</section>
+		<section class="flex flex-col px-6 rounded-3xl lg:py-8">
+			<h3 class="mt-5 text-lg text-black font-display">Small</h3>
+			<p class="mt-2 text-sm text-slate-500">
+			Idéal pour les associations avec plus de 50 membres.
+			</p>
+			<p
+			class="order-first text-5xl font-light tracking-tight text-black font-display"
+			>
+			350€
+			</p>
+			<ul
+			role="list"
+			class="flex flex-col order-last mt-10 text-sm text-slate-600 gap-y-3"
+			>
+			<li class="flex items-center">
+				<ion-icon
+				class="w-4 h-4 md hydrated"
+				name="checkmark-outline"
+				role="img"
+				aria-label="checkmark outline"
+				/><span class="ml-4">Serveur partagé</span>
+			</li>
+			<li class="flex items-center">
+				<ion-icon
+				class="w-4 h-4 md hydrated"
+				name="checkmark-outline"
+				role="img"
+				aria-label="checkmark outline"
+				/><span class="ml-4">Base de donnée privée</span>
+			</li>
+			<li class="flex items-center">
+				<ion-icon
+				class="w-4 h-4 md hydrated"
+				name="checkmark-outline"
+				role="img"
+				aria-label="checkmark outline"
+				/><span class="ml-4">Nombre d'évènement illimité</span>
+			</li>
+			<li class="flex items-center">
+				<ion-icon
+				class="w-4 h-4 md hydrated"
+				name="checkmark-outline"
+				role="img"
+				aria-label="checkmark outline"
+				/><span class="ml-4">Nombre d'utilisateur maximum : 100</span>
+			</li>
+			</ul>
+			<a
+			class="inline-flex items-center justify-center w-full px-6 py-3 mt-8 text-center text-black transition duration-200 ease-in-out transform border-2 border-black hover:bg-transparent hover:text-black focus:ring-2 focus:ring-offset-2 focus:ring-offset-black focus:ring-black focus:outline-none rounded-3xl"
+			href="#">Obtenir une offre</a
+			>
+		</section>
+		<section class="flex flex-col px-6 rounded-3xl lg:py-8">
+			<h3 class="mt-5 text-lg text-black font-display">Normal</h3>
+			<p class="mt-2 text-sm text-slate-500">
+			Parfait pour les écoles avec moins de 500 étudiants.
+			</p>
+			<p
+			class="order-first text-5xl font-light tracking-tight text-black font-display"
+			>
+			~ 650€
+			</p>
+			<ul
+			role="list"
+			class="flex flex-col order-last mt-10 text-sm text-slate-600 gap-y-3"
+			>
+			<li class="flex items-center">
+				<ion-icon
+				class="w-4 h-4 md hydrated"
+				name="checkmark-outline"
+				role="img"
+				aria-label="checkmark outline"
+				/><span class="ml-4">Serveur privé</span>
+			</li>
+			<li class="flex items-center">
+				<ion-icon
+				class="w-4 h-4 md hydrated"
+				name="checkmark-outline"
+				role="img"
+				aria-label="checkmark outline"
+				/><span class="ml-4">Base de donnée privée</span>
+			</li>
+			<li class="flex items-center">
+				<ion-icon
+				class="w-4 h-4 md hydrated"
+				name="checkmark-outline"
+				role="img"
+				aria-label="checkmark outline"
+				/><span class="ml-4">Nombre d'évènement illimité</span>
+			</li>
+			<li class="flex items-center">
+				<ion-icon
+				class="w-4 h-4 md hydrated"
+				name="checkmark-outline"
+				role="img"
+				aria-label="checkmark outline"
+				/><span class="ml-4">Nombre d'utilisateur maximum : 500</span>
+			</li>
+			<li class="flex text-sm text-gray-500">
+				- Frais serveur : 360€ <br>
+				- Mise en service : 200€ (seulement la 1ere année) <br>
+				- Formation : 80€ (seulement la 1ere année) <br>
+				- Support & Maintenance : 300€ (offerte la première année) <br>
+				- Paiement sur mesure</b> : en 3 ou 4 fois
+				</p>
+				
+			</li>
+			</ul>
+			<a
+			class="inline-flex items-center justify-center w-full px-6 py-3 mt-8 text-center text-black transition duration-200 ease-in-out transform border-2 border-black hover:bg-transparent hover:text-black focus:ring-2 focus:ring-offset-2 focus:ring-offset-black focus:ring-black focus:outline-none rounded-3xl"
+			href="#">Obtenir une offre</a
+			>
+		</section>
+		<section class="flex flex-col px-6 rounded-3xl lg:py-8">
+			<h3 class="mt-5 text-lg text-black font-display">Large</h3>
+			<p class="mt-2 text-sm text-slate-500">
+			Idéal pour les écoles avec plus de 500 étudiants.
+			</p>
+			<p
+			class="order-first text-5xl font-light tracking-tight text-black font-display"
+			>
+			950€
+			</p>
+			<ul
+			role="list"
+			class="flex flex-col order-last mt-10 text-sm text-slate-600 gap-y-3"
+			>
+			<li class="flex items-center">
+				<ion-icon
+				class="w-4 h-4 md hydrated"
+				name="checkmark-outline"
+				role="img"
+				aria-label="checkmark outline"
+				/><span class="ml-4">Serveur privé</span>
+			</li>
+			<li class="flex items-center">
+				<ion-icon
+				class="w-4 h-4 md hydrated"
+				name="checkmark-outline"
+				role="img"
+				aria-label="checkmark outline"
+				/><span class="ml-4">Base de donnée privée</span>
+			</li>
+			<li class="flex items-center">
+				<ion-icon
+				class="w-4 h-4 md hydrated"
+				name="checkmark-outline"
+				role="img"
+				aria-label="checkmark outline"
+				/><span class="ml-4">Nombre d'évènement illimité</span>
+			</li>
+			<li class="flex items-center">
+				<ion-icon
+				class="w-4 h-4 md hydrated"
+				name="checkmark-outline"
+				role="img"
+				aria-label="checkmark outline"
+				/><span class="ml-4">Nombre d'utilisateur maximum : 500</span>
+			</li>
+			<li class="flex text-sm text-gray-500">
+				- Frais serveur : 560€ <br>
+				- Mise en service : 200€ (seulement la 1ere année) <br>
+				- Formation : 80€ (seulement la 1ere année) <br>
+				- Support & Maintenance : 300€ (offerte la première année) <br>
+				- Paiement sur mesure</b> : en 3 ou 4 fois
+				</p>
+				
+			</li>
+			</ul>
+			<a
+			class="inline-flex items-center justify-center w-full px-6 py-3 mt-8 text-center text-black transition duration-200 ease-in-out transform border-2 border-black hover:bg-transparent hover:text-black focus:ring-2 focus:ring-offset-2 focus:ring-offset-black focus:ring-black focus:outline-none rounded-3xl"
+			href="#">Obtenir une offre</a
+			>
+		</section>
+		</div>
+	</div>
 </section>
