--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -5,13 +5,14 @@
       <div>
         <p
           class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter">
-          I am a slightly longer <span class="lg:block"
-            >heading than the others
+          
+          Une plateforme, <span class="lg:block"
+            >toutes les fonctionnalités dont vous avez besoin.
           </span>
         </p><p
           class="mt-4 text-lg max-w-xl mx-auto tracking-tight text-slate-500">
-          If you could kick the person in the pants responsible for most of your
-          trouble, you wouldn't sit for a month
+          Après 4 ans de partenariat avec une école d'ingénieur et plus de 1100 étudiants satisfait, 
+          Degass répond aux besoins des écoles supérieures.
         </p>
       </div>
     </div>
@@ -32,11 +33,11 @@
                   />
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
-                  Built with Astro.js.
+                  Créer des évènements
                 </p>
               </div><div class="mt-4 text-slate-500 text-sm">
-                Astro is an all-in-one web framework for building fast,
-                content-focused websites.
+                Tout types d'évènements, du petit repas au week-end d'inté.
+                la seule limite est votre imagination
               </div>
             </div><div>
               <div>
@@ -50,12 +51,11 @@
                   />
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
-                  Styled with Tailwind CSS.
+                  Informer les participants
                 </p>
               </div><div class="mt-4 text-slate-500 text-sm">
-                Tailwind CSS generates styles by searching for class names in
-                HTML, JavaScript, and templates, and then outputs them in a
-                single CSS file.
+                Une page accessible à tous regroupant les évènements de vos clubs/assos,
+                avec la possibilité de voir qui y est inscrit et dans quelle navette !
               </div>
             </div><div>
               <div>
@@ -69,11 +69,11 @@
                   />
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
-                  Relived with Alpine.js
+                  Accueiller vos participants
                 </p>
               </div><div class="mt-4 text-slate-500 text-sm">
-                Alpine is a rugged, minimal tool for for adding behavior to your
-                markup, similar to jQuery but for the modern web.
+                Scannez les places de vos particpants
+                Vérifier rapidemment qu'ils sont dans la bonne navette 
               </div>
             </div><div>
               <div>
@@ -87,12 +87,11 @@
                   />
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
-                  Keyboard accessible.
+                  Gérer votre évènements
                 </p>
               </div><div class="mt-4 text-slate-500 text-sm">
-                Everything I build is keyboard accessible, and I meticulously
-                write the markup to deliver the best screenreader experience I
-                can provide.
+                Gérer les inscriptions de chacun de vos participants, renvoyer leurs places, valider virtuellement des inscriptions,
+                on a pensé à tout ! 
               </div>
             </div><div>
               <div>
@@ -106,11 +105,11 @@
                   />
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
-                  Production-ready
+                  Créer vos clubs/assos
                 </p>
               </div><div class="mt-4 text-slate-500 text-sm">
-                I tested the template in the latest versions of all browsers to
-                handle lots of edge-cases you might encounter.
+                Un nom, un président et un insta !
+                Tout asso ou club les plus improbables trouveront leur place sur Degass
               </div>
             </div><div>
               <div>
@@ -124,12 +123,10 @@
                   />
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
-                  Simple deploys
+                  Attribuer des rôles
                 </p>
               </div><div class="mt-4 text-slate-500 text-sm">
-                The template is ready for production and can be deployed
-                anywhere static websites can, such as Vercel, Netlify, or GitHub
-                Pages, and more.
+                Après avoir créer vos clubs/assos et attribuer leurs présidents, ceux-ci pourront attribuer les différents rôles de chacun de leurs membres
               </div>
             </div>
           </div>
