--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -5,8 +5,8 @@
       <div>
         <p
           class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter">
-          I am a slightly longer <span class="lg:block"
-            >heading than the others
+          Degass,  <span class="lg:block"
+            >votre outil sur-mesure
           </span>
         </p><p
           class="mt-4 text-lg max-w-xl tracking-tight text-slate-500 mx-auto">
@@ -30,11 +30,11 @@
               />
             </div><p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
-              Developer experience
+              Support client rapide et personnalisée
             </p>
           </div><p class="text-slate-500 text-sm mt-4">
-            Everything I build is keyboard accessible, and I meticulously write
-            the markup to deliver the best screenreader experience.
+            Finit les mails, service client directement via votre messagerie favorite (Messenger, WhatsApp, Instagram, etc.)
+            <br> Garantie de réponse dans les 48h
           </p>
         </div><div>
           <div class="gap-3 lg:inline-flex lg:items-center">
@@ -48,11 +48,10 @@
               />
             </div><p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
-              Designers go-to app
+              Installation personnalisée
             </p>
           </div><p class="text-slate-500 text-sm mt-4">
-            I tested the template in the latest versions of all browsers to
-            handle lots of edge-cases you might encounter.
+            Serveur et base de donnée privée chez l'hébergeur de votre choix (Hostinger, OVH, etc.)
           </p>
         </div><div>
           <div class="gap-3 lg:inline-flex lg:items-center">
@@ -66,11 +65,10 @@
               />
             </div><p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
-              Easy onboarding
+              Mise à jour gratuite, pour toujours
             </p>
           </div><p class="text-slate-500 text-sm mt-4">
-            The template is ready for production and can be deployed anywhere
-            static websites can, such as Vercel, Netlify, or GitHub Pages,..
+            L'outil est en constante évolution grâce à vos retours
           </p>
         </div>
       </div>
