--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -3,70 +3,55 @@
     class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
     <div>
       <div class="text-center max-w-4xl mx-auto">
-        <div class="sm:flex sm:justify-center">
-          <div
-            class="relative rounded-full py-1 px-3 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
-            <a
-              href="https://lexingtonthemes.com/free-templates/"
-              class="font-semibold text-indigo-600"
-              ><span class="absolute inset-0" aria-hidden="true"></span>
-              <span class="block lg:inline">
-                More free & Premium templates <span aria-hidden="true"
-                  >&rarr;</span
-                >
-              </span>
-            </a>
-          </div>
-        </div>
         <p
-          class="text-black mt-8 font-extrabold lg:text-5xl text-4xl tracking-tight">
-          A starter template built with Astro and Tailwind CSS for your next
-          project
+          class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight">
+          Dites adieu aux Excels, bonjour à l'organisation simplifiée !
+          
         </p>
         <p class="text-slate-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
-          Putting together a directory website was a challenge. Superstash lets
-          you focus on the content and makes the entire process effortless.
+          Degass, la webapp de <b>gestion</b> et d’<b>organisation</b> d’événements pour asscociations & écoles supérieures.
         </p>
       </div>
       <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
         <a
           class="items-center justify-center font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full border"
-          href="https://github.com/michael-andreuzza/astrosaas">GitHub</a
+          href="https://github.com/michael-andreuzza/astrosaas">En savoir plus</a
         >
         <a
           class="items-center justify-center font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
           href="https://lexingtonthemes.com"
-          >Lexington Themes &nbsp; &rarr;
+          >Demander une démo. &nbsp; &rarr;
         </a>
       </div>
       <dl
-        class="lg:gap-x-8 lg:grid-cols-3 max-w-4xl mt-8 mx-auto sm:gap-x-6 sm:gap-y-12 sm:grid sm:grid-cols-2 sm:space-y-0 space-y-6 text-center text-sm items-start">
+        class="lg:gap-x-8 lg:grid-cols-4 max-w-4xl mt-8 mx-auto sm:gap-x-6 sm:gap-y-12 sm:grid sm:grid-cols-2 sm:space-y-0 space-y-6 text-center text-sm items-start">
         <div class="text-slate-500">
           <strong class="text-slate-700"
-            >Astro, Tailwind CSS and Alpine.js</strong
-          > ━ This are the popular technologies behind Astrosaas.
+            >Créer tout type d'évènements</strong
+          > ━ Grâce aux différents options de création, laissez libre cours à votre imagination.
         </div>
         <div class="text-slate-500">
-          <strong class="text-slate-700">Includes 6 pages</strong> ━ You will find
-          this landing, faq, terms,privacy,sign up and sign in pages.
+          <strong class="text-slate-700">Informer facilement </strong> ━ L'ensemble des évènements en cours et à venir sur une même page !
+        
         </div>
         <div class="text-slate-500">
-          <strong class="text-slate-700">Different section</strong> ━ The starter
-          includes different feature sections, a pricing table, testmionial, CTA
-          and full forms. more.
+          <strong class="text-slate-700">Inscriver les participants</strong> ━  Organiser des permanences en physique ou permetter l'inscription en autonomie.
+        </div>
+        <div class="text-slate-500">
+          <strong class="text-slate-700">Gérer l'évenement</strong> ━ Scannez les QR Code, gérez les inscriptions, visualisez les statistiques de votre évènement.
         </div>
       </dl>
     </div>
-    <div class="relative w-full mx-auto max-w-7xl items-center py-12 pb-12">
+    <div class="relative w-full mx-auto max-w-7xl items-center py-12">
       <div class="bg-slate-100 p-8 rounded-3xl" style="">
         <img
           alt=""
           class="relative w-full border lg:rounded-2xl object-cover rounded shadow-2xl"
-          src="https://linear.app/_next/image?url=%2F_next%2Fstatic%2Fmedia%2Fhero%404x.15e3a396.jpg&w=3840&q=75"
+          src="../../../public/degass_home.JPG"
         />
       </div>
     </div>
-    <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
+    <!-- <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
       <div class="flex justify-center col-span-1 px-8">
         <img alt="logo" class="max-h-12" src="/Figma.svg" />
       </div>
@@ -85,6 +70,6 @@
       <div class="flex justify-center col-span-1 px-8">
         <img alt="logo" class="max-h-12" src="/Gumroad.svg" />
       </div>
-    </div>
+    </div> -->
   </div>
 </section>
